--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -135,6 +135,53 @@
 			width: auto;
 		}
 
+/* Force table to not be like tables anymore */
+	table, thead, tbody, th, td, tr { 
+		display: block; 
+	}
+	
+	/* Hide table headers (but not display: none;, for accessibility) */
+	thead tr { 
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+	
+	tr { border: 1px solid #ccc; }
+	
+	td { 
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee; 
+		position: relative;
+		padding-left: 50%; 
+	}
+	
+	td:before { 
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		top: 6px;
+		left: 6px;
+		width: 45%; 
+		padding-right: 10px; 
+		white-space: nowrap;
+	}
+	
+	/*
+	Label the data
+	*/
+	#table-palestras:nth-of-type(1):before { content: "Palestrante"; }
+	#table-palestras:nth-of-type(2):before { content: "Data"; }
+		#table-palestras:nth-of-type(3):before { content: "Horário"; }
+		#table-palestras:nth-of-type(4):before { content: "Preço"; }
+		#table-palestras:nth-of-type(5):before { content: "Vagas"; }
+
+		#table-vistas:nth-of-type(1):before { content: "Empresa"; }
+	#table-visitas:nth-of-type(2):before { content: "Data"; }
+		#table-visitas:nth-of-type(3):before { content: "Horário"; }
+		#table-visitas:nth-of-type(4):before { content: "Preço"; }
+		#table-visitas:nth-of-type(5):before { content: "Vagas"; }
 /*********************************************************************************/
 /* Wrappers                                                                      */
 /*********************************************************************************/
