--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -154,7 +154,7 @@
 		border: none;
 		border-bottom: 1px solid #eee; 
 		position: relative;
-		padding-left: 50%; 
+		padding: 10%; 
 		text-align: center;
 	}
 	
