--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -234,6 +234,5 @@
 
 	.landing-page {
 		background-image: url('LOGO - SEP.jpg');
-			background-repeat: no-repeat;
-			width: 50%;
+		width: 100%; height: 100%; margin: 0; padding; 0;
 	}
