--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -231,3 +231,10 @@
 		font-size: 1em;
 		margin: 0;
 	}
+
+	.landing-page {
+		width: 100%;
+		height: 100%;
+		background-image: url('logo-sep-mobile.jpg');
+		background-repeat: no-repeat;
+	}
